No se usan numeros en items

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </form>
     <h2 class="title">Items</h2>
     <ul id="items" class="list-group">
-      <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
-      <li class="list-group-item">Item 4</li>
+      <li class="list-group-item">Item One</li>
+      <li class="list-group-item">Item Two</li>
+      <li class="list-group-item">Item Three</li>
+      <li class="list-group-item">Item Four</li>
     </ul>
    </div>
   </div>
